ios overflow scroll bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,7 +48,7 @@
 
 .mobile-view {
   .background-text {
-    bottom: 20px;
+    bottom: 40px;
   }
 }
 
