--- a/src/app/pages/blog/blog.component.scss
+++ b/src/app/pages/blog/blog.component.scss
@@ -9,7 +9,7 @@ p {
   grid-gap: 20px;
   height: 100%;
   min-height: -webkit-fill-available;
-  overflow: scroll;
+  overflow-y: auto;
   margin-top: 0;
   padding-top: 70px;
   margin-right: 0;
